# htmxtodo

./: .air.toml  .editorconfig  .gitignore  Cargo.toml  Makefile  app.go  go.mod  go.sum  main.go  server.go
cognito_auth/: cdk.json  package.json  pnpm-lock.yaml
cognito_auth/lib/: user-pool-client-stack.ts  user-pool-stack.ts
cognito_auth/test/: cognito_auth.test.ts
components/: components.templ  helpers.go
db/: schema.sql
db/migrations/: 20230810152727_create_list_table.sql  20230810152727_create_lists_table.sql  20230810153011_create_item_table.sql  20230810153011_create_items_table.sql
internal/app/: app.go  app_test.go  config.go  error_handler.go  middleware.go
internal/config/: config.go
internal/constants/: constants.go
internal/repo/: repo.go
internal/secrets/: secrets.go
internal/view/: card.go  context.go  renderer.go  renderer_test.go  rendering.go  view.go
migrations/: 20230824011923_create_list.down.sql  20230824011923_create_list.up.sql  20230824012049_create_item.up.sql
public/: 404.html  500.html
src/: db.rs  error.rs  main.rs
static/: application.js
templates/: base.html
templates/lists/: _card.html  _form.html  index.html
views/: layout.templ  layout_templ.go
views/errors/: 404.hbs  404.tmpl  500.html  errors.templ
views/layouts/: auth.templ  base.hbs  main.hbs  main.html  main.templ  main_templ.go  master.html
views/lists/: _card.hbs  _card.html  _card.tmpl  _form.hbs  _form.html  _list.tmpl  card.go  edit.html  index.hbs  index.html  index.tmpl  lists.templ  lists_templ.go  show.tmpl
views/lists/shared/: _card.html  _form.html  _list.html
views/login/: login.templ  models.go
views/partials/: _head.hbs
views/shared/: _head.html  _head.tmpl
