[package]
name = "htmxtodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros"] }
axum-template = { version = "1.0.0", features = ["handlebars"] }
dotenvy = "0.15.7"
handlebars = "4.3.7"
serde = { version = "=1.0.171", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
